header Section done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
     <title>Gihub_Project2</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="header">
+        <ul class="main_menu">
+          <li class="nav_item"><a href="#">Home</a></li>
+          <li class="nav_item"><a href="#">Content</a></li>
+          <li class="nav_item"><a href="#">Service</a></li>
+          <li class="nav_item"><a href="#">About</a></li>
+        </ul>
+      </div>
+    </header>
+  </body>
 </html>
