slider section done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <title>Gihub_Project2</title>
   </head>
   <body>
@@ -17,5 +17,14 @@
         </ul>
       </div>
     </header>
+
+    <section class="slider">
+      <div class="slider_conten">
+        <div class="slider_img"><img src="images/ChatGPT Image Jun 29, 2025, 04_59_47 AM.png" alt=""></div>
+        <div class="slider_img"><img src="images/Generated Image May 09, 2025 - 10_38PM.jpeg"></div>
+        <div class="slider_img"><img src="images/Generated Image May 20, 2025 - 11_47PM.jpeg""></div>
+        <div class="slider_img"><img src="images/Generated Image May 20, 2025 - 11_49PM.jpeg" alt=""></div>
+      </div>
+    </section>
   </body>
 </html>
