--- a/index.html
+++ b/index.html
@@ -20,11 +20,34 @@
 
     <section class="slider">
       <div class="slider_conten">
-        <div class="slider_img"><img src="images/ChatGPT Image Jun 29, 2025, 04_59_47 AM.png" alt=""></div>
-        <div class="slider_img"><img src="images/Generated Image May 09, 2025 - 10_38PM.jpeg"></div>
-        <div class="slider_img"><img src="images/Generated Image May 20, 2025 - 11_47PM.jpeg""></div>
-        <div class="slider_img"><img src="images/Generated Image May 20, 2025 - 11_49PM.jpeg" alt=""></div>
+        <div class="slider_img">
+          <img
+            src="images/ChatGPT Image Jun 29, 2025, 04_59_47 AM.png"
+            alt=""
+          />
+        </div>
+        <div class="slider_img">
+          <img src="images/Generated Image May 09, 2025 - 10_38PM.jpeg" />
+        </div>
+        <div class="slider_img">
+          <img src="images/Generated Image May 20, 2025 - 11_47PM.jpeg"">
+        </div>
+        <div class="slider_img">
+          <img
+            src="images/Generated Image May 20, 2025 - 11_49PM.jpeg"
+            alt=""
+          />
+        </div>
       </div>
+    </section>
+
+    <section class="content">
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque corporis
+        mollitia fugiat numquam velit recusandae reprehenderit nihil, debitis
+        exercitationem quae temporibus n ulla architecto laboriosam adipisci
+        cupiditate perspiciatis ex quod harum.
+      </p>
     </section>
   </body>
 </html>
