footer section done

--- a/index.html
+++ b/index.html
@@ -49,5 +49,16 @@
         cupiditate perspiciatis ex quod harum.
       </p>
     </section>
+
+    <footer>
+      <div class="footer">
+        <ul class="footer_menu">
+          <li class="nav_item"><a href="#">Home</a></li>
+          <li class="nav_item"><a href="#">Content</a></li>
+          <li class="nav_item"><a href="#">Service</a></li>
+          <li class="nav_item"><a href="#">About</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
