Fix: Added a new link on footer menu

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <li class="nav_item"><a href="#">Content</a></li>
           <li class="nav_item"><a href="#">Service</a></li>
           <li class="nav_item"><a href="#">About</a></li>
+          <li class="nav_item"><a href="#">Social_Link</a></li>
         </ul>
       </div>
     </footer>
