Added a demo link for test on footer nav

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           <li class="nav_item"><a href="#">Service</a></li>
           <li class="nav_item"><a href="#">About</a></li>
           <li class="nav_item"><a href="#">Social_Link</a></li>
+          <li class="nav_item"><a href="#">Demo</a></li>
         </ul>
       </div>
     </footer>
